--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
-  }
+  },
+  "repository": "https://github.com/Eman-El-Zetawy/APIEbtekerthon",
+  "author": "Eman-El-Zetawy <dovprogrammer@gmail.com>"
 }
